# ISEA-Framework

./: .clang-format  .gitignore  .gitlab-ci.yml  .reviewboardrc  CHANGELOG  CMakeLists.txt  DevelopmentTeam.md  README.md  conanfile.py  valgrind_suppression
doxygen/: CMakeLists.txt  Doxyfile.in  Doxyfile_release.in  aging_simulation.md  automatische_vereinfachung.md  compiling.md  einleitung.md  gettingStarted.md  mainpage.md  simulation_cycle.md  simulink.md  simulink_converter.md  system.md  visualization.md  xmlcinterface.md  xmlcooling.md  xmlelectrical.md  xmlexecutable.md  xmlfactory.md  xmlhalfcell.md  xmllookuptype.md  xmlobject.md  xmlobserer.md  xmlobserver.md  xmloptionen.md  xmlstate.md  xmlstructure.md  xmlthermalblock.md  xmlthermalmaterial.md  xmlthermalmodel.md
doxygen/examples/: TestShowBattery.xml  TestShowBattery_color.xml  aging_example.xml  aging_example_color.xml  cellelement.xml  cellelement_color.xml  cellelement_halfcell.xml  cellelement_halfcell_color.xml  csvfilter.xml  csvfilter_color.xml  expression_obj.xml  expression_obj_color.xml  expression_obj_rescale.xml  expression_obj_rescale_color.xml  filterChain.xml  filterChain_color.xml  halfcell_example.xml  halfcell_example_color.xml  matlabFilter.xml  matlabFilter_color.xml  object_cacheref.xml  object_cacheref_color.xml  socstate.xml  socstate_color.xml  stdoutfilter.xml  stdoutfilter_color.xml  testconfig.xml  testconfig_color.xml  thermaleinlesen.xml  thermaleinlesen_color.xml  xmlCurrentState.xml  xmlCurrentState_color.xml
src/: CMakeLists.txt
src/aging/: aging_base.cpp  aging_base.h  aging_lam.cpp  aging_lam.h  aging_lli.cpp  aging_lli.h  aging_simulation.cpp  aging_simulation.h  aging_twoport.cpp  aging_twoport.h  anode_overhang.cpp  anode_overhang.h  calendarian_aging.cpp  calendarian_aging.h  calendarian_aging2.cpp  calendarian_aging2.h  cyclical_aging.cpp  cyclical_aging.h  cyclical_aging2.cpp  cyclical_aging2.h  empirical_aging.cpp  empirical_aging.h  generic_aging.cpp  generic_aging.h
src/cinterface/: CMakeLists.txt  Geometry2DTest.cpp  Geometry2DTest.h  cinterface.cpp  cinterface.h  cinterface_Aging.cpp  cinterface_Aging.h  cinterface_GeometryTest.cpp  cinterface_GeometryTest.h  cinterface_Th.cpp  cinterface_Th.h  cinterface_ThEl.cpp  cinterface_ThEl.h  cinterface_ThEl_Aging.cpp  cinterface_ThEl_Aging.h  cinterface_common_functions.cpp  cinterface_common_functions.h  ds1006_dummy.cpp  macros.h  pointer_structure.h  simulink_common.h
src/container/: armadillo_wrapper.cpp  armadillo_wrapper.h  eigen_wrapper.cpp  eigen_wrapper.h  matioWriteTree.cpp  matioWriteTree.h  matio_data.cpp  matio_data.h  matio_file.cpp  matio_file.h
src/convert/: double2char.cpp  double2char.h  mex2lookup.cpp  mex2lookup.h  string2lookup.cpp  string2lookup.h  string2lookup_exception.h
src/cstring/: strlcat.h  strlcombine.cpp  strlcombine.h
src/electrical/: anode_element.cpp  anode_element.h  capacity.cpp  capacity.h  cathode_element.cpp  cathode_element.h  cell_data_struct.h  cellelement.cpp  cellelement.h  chained_twoport.cpp  chained_twoport.h  constantphaseelement.cpp  constantphaseelement.h  electrical_data_struct.h  electrical_simulation.cpp  electrical_simulation.h  electricalelement.cpp  electricalelement.h  electrode.cpp  electrode.h  electrode_element.cpp  electrode_element.h  inductance.cpp  inductance.h  ohmicresistance.cpp  ohmicresistance.h  parallelRCAlg.cpp  parallelRCAlg.h  parallelrc.cpp  parallelrc.h  paralleltwoport.cpp  paralleltwoport.h  rmphn.cpp  rmphn.h  serialtwoport.cpp  serialtwoport.h  sphericalDiffusion.cpp  sphericalDiffusion.h  twoport.cpp  twoport.h  (+20 more)
src/exceptions/: CMakeLists.txt  error_function.cpp  error_function.h  error_proto.h
src/export/: CreateSimulinkModelFunction.cpp  CreateSimulinkModelFunction.h  LoadInitialStateFunction.cpp  LoadInitialStateFunction.h  LoadObjectValuesFunction.cpp  LoadObjectValuesFunction.h  baseExport.h  circuit_simulink_model.cpp  circuit_simulink_model.h  esbVisualizer.cpp  esbVisualizer.h  exportSystem.cpp  exportSystem.h  matlabExport.cpp  matlabExport.h  matrix_simulink_model.cpp  matrix_simulink_model.h  numericExport.cpp  numericExport.h  spiceExport.cpp  spiceExport.h  svgExport.cpp  svgExport.h  svgLibraryInterpreter.cpp  svgLibraryInterpreter.h  symbolicExport.cpp  symbolicExport.h
src/expressionparser/: expressionparser.cpp  expressionparser.h
src/factory/: check_positive_int.cpp  check_positive_int.h  classwrapper.h  factory.h  factorybuilder.cpp  factorybuilder.h  factorybuilder_for_aging.cpp  factorybuilder_for_aging.h  factorybuilder_without_electrical_elements.cpp  factorybuilder_without_electrical_elements.h  get_electrical_discretization.cpp  get_electrical_discretization.h
src/geometry/: angle.cpp  angle.h  area.cpp  area.h  block_geometry.cpp  block_geometry.h  cartesian.cpp  cartesian.h  cylindric.cpp  cylindric.h  geometry2D.cpp  geometry2D.h  geometry2D_Boost_geometry.h  geometry2D_Boost_polygon.h  innerArea.cpp  innerArea.h  plane.cpp  plane.h  tolerance.cpp  tolerance.h  two_dim.cpp  two_dim.h  unit_vector.cpp  unit_vector.h
src/lookup/: lookup.cpp  lookup.h  lookupException.h  lookupType.cpp  lookupType.h
src/misc/: StrCont.cpp  StrCont.h  WarningsToTestBuild.cpp_save  aligned_to_cache_line.h  boolVecOper.cpp  boolVecOper.h  cellelementCounter.h  charArrayCmp.cpp  charArrayCmp.h  checksum.cpp  checksum.h  cmp_str.cpp  cmp_str.h  fast_copy_matrix.cpp  fast_copy_matrix.h  findSimulationType.cpp  findSimulationType.h  get_position_in_vector.h  macros.h  mapGetSet.h  matrixInclude.cpp  matrixInclude.h  rainflow.cpp  rainflow.h  slice.h  symbolic.cpp  symbolic.h  symbolicAst.cpp  symbolicAst.h  toLower.cpp  (+6 more)
standalone/: CMakeLists.txt  QuickVisualizer.cpp  agingSimulation.cpp  directSymbolic2Tex.cpp  dotExport.cpp  eigenValues.cpp  electricalSimulation.cpp  standalone.cpp  standalone.h  svgExport.cpp  symbolic2Dot.cpp  symbolic2Tex.cpp  symbolicOptimization.cpp  system2Matlab.cpp  system2Symbolic.cpp  system2Tex.cpp  thermalElectricalSimulation.cpp  thermalSimulation.cpp  totalCapacity.cpp  verification.cpp
(+658 files in other folders)
